# simple-vulkan

./: CMakeLists.txt  key_mapping.cpp  simple-vulkan.cpp  simple-vulkan.h
lib/: CMakeLists.txt
lib/sv/include/sv/: abstract_command_buffer.hpp  abstract_context.hpp  app.hpp  bindless.hpp  bindless_access.hpp  buffer.hpp  camera.hpp  command_buffer.hpp  common.hpp  context.hpp  event_system.hpp  expected.hpp  imgui_renderer.hpp  immediate_commands.hpp  line_canvas.hpp  material_definition.hpp  mesh_definition.hpp  object_handle.hpp  object_holder.hpp  object_pool.hpp  pipeline.hpp  renderer.hpp  simple-mesh.hpp  staging_allocator.hpp  strong.hpp  svpch.hpp  texture.hpp  tracing.hpp  transitions.hpp
lib/sv/include/sv/shader/: compilation.hpp  shader.hpp
lib/sv/src/: app.cpp  buffer.cpp  camera.cpp  command_buffer.cpp  common.cpp  context.cpp  event_system.cpp  imgui_renderer.cpp  immediate_commands.cpp  line_canvas.cpp  mesh_definition.cpp  object_pool.cpp  pipeline.cpp  renderer.cpp  simple-mesh.cpp  staging_allocator.cpp  texture.cpp  tracy_alloc.cpp  vma_impl.cpp
lib/sv/src/shader/: compilation.cpp  compilation_impl.inl  shader.cpp
lib/sv/tests/: object_pool_tests.cpp
scripts/: format.py
shaders/: directional_shadow.shader  gbuffer_lighting.glsl  gbuffer_object.glsl  grid.shader  simple.glsl  tonemap_hdr_to_sdr.glsl
shaders/include/: common_deferred.glsl  ubo.glsl
